@@ -3,6 +3,7 @@ Changelog for pdoTools.
 2.2.5 pl
 ==============
 - [#182] [pdoTitle] Added passing a parameters into nested pdoCrumbs.
+- [pdoSitemap] Added processing of MODX tags if needed.
 
 2.2.4 pl
 ==============
